# DioraServerConnecter

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
client/src-tauri/src/commands/: device.rs  mod.rs  ssh.rs
client/src/components/: AdminPanel.tsx  Chat.tsx  FileManager.tsx  Terminal.tsx  UpdateChecker.tsx
client/src/lib/: api.ts
client/src/pages/: Login.tsx  Main.tsx  Pending.tsx
client/src/stores/: auth.ts  ws.ts
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/pages/: Containers.tsx  Dashboard.tsx  Devices.tsx  Login.tsx  Logs.tsx  Messages.tsx  Metrics.tsx  Notifications.tsx  Releases.tsx  SharedFolders.tsx  Users.tsx
dashboard/src/stores/: auth.ts  ws.ts
docker/: Dockerfile  entrypoint.sh  sshd_config  supervisord.conf
scripts/: build-macos.command  build-windows.bat  serve-download.sh
server/: package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: index.ts  seed.ts
server/src/lib/: crypto.ts  prisma.ts  redis.ts
server/src/middleware/: authenticate.ts  authorize.ts  device-check.ts
server/src/plugins/: websocket.ts
server/src/routes/: admin-releases.ts  admin.ts  auth.ts  (+7 more)
shared/: package.json  tsconfig.tsbuildinfo
(+18 files in other folders)
